--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/file-saver": "^2.0.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.12",
     "@types/react": "^17.0.5",
@@ -17,6 +18,7 @@
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "file-saver": "^2.0.5",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
